--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -1,4 +1,4 @@
-/* CSS Index 
+/* CSS Index
 -----------------------------------
 1. Sidebar area start
 2. cart sidebar start
@@ -2321,9 +2321,8 @@ input[type="number"] {
   display: block;
   padding: 0;
   margin: 0;
-  padding-left: 20px;
   border: 1px solid #eee;
-  margin-left: 27px;
+  margin: 20px;
 }
 
 .quantity input:focus {
